--- a/angular.json
+++ b/angular.json
@@ -99,10 +99,12 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.css"
-            ],
-            "scripts": []
+           "styles": [
+  "src/styles.css",
+  "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+],
+"scripts": []
+
           }
         }
       }
